2024-11-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/ato.c:
	  Disable atoll test for pdk15 due to lack of target RAM.

2024-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/imove.cc:
	  Fix simulation of f8 N and Z flags.
	* src/f8/main.c:
	  Use Z flag of 16-bit load to shorten startup code.
	* src/f8/peeph.def:
	  Optimize out some f8 tst, tstw where N and Z flags were already set by previous instructions, optimize jumps.
	* src/f8/peep.c:
	  Fix calculation of relative jump distance over f8 xch instruction.
	* src/f8/gen.c:
	  Improve f8 code generation for conditional jumps; improve value caching.

2024-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c,
	  src/f8/gen.c,
	  src/f8/peeph.def:
	  Improve code for conditional branches in f8 port.
	* device/include/stdlib.h,
	  device/lib/strtoll.c,
	  device/lib/strtoull.c,
	  device/lib/wcstoll.c,
	  device/lib/wcstoull.c:
	  Partial fix for bug #3798, to get atoll.

2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8.h,
	  sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/disass.cc,
	  sim/ucsim/src/sims/f8.src/f8.cc,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/ialu.cc:
	  Fixes for two-operand 16 and 16/8 bit f8 instructions.
	* src/f8/gen.c:
	  Improve use of two-operand f8 instructions. Improve f8 code generation for pointer access.
	* src/f8/peep.c:
	  Fix asm argument handling buffer overflow. Fix handling of clear via pointer.

2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix generation of invalid asm for bit-field read.
	* sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc:
	  Fix ldw y, z f8 instruction simulation.

2024-11-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,